# FastAPI-Backend-Template

./: .env.example  .gitignore  alembic.ini.example  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20251023_000000_init.py  20251024_000001_chat.py  20251028_000002_refresh_tokens_timestamptz.py  20251029_000003_profile.py  20251030_000002_chat_group_name.py  20251030_000004_email_verified.py  b227372fedfc_datetimemixin.py
app/: main.py
app/api/: deps.py  exception_handlers.py  middlewares.py
app/api/routers/: __init__.py  auth.py  chat.py  health.py  profile.py
app/core/: config.py  context.py  decorators.py  exceptions.py  lifespan.py  logging.py  metrics.py  redis.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  attachment.py  chat.py  mixins.py  refresh_token.py  user.py  user_resume.py
app/schemas/: auth.py  chat.py  common.py  user.py
app/services/: auth_service.py  chat_service.py  mailer.py  profile_service.py  ws_broker.py
docker/: backend.Dockerfile  entrypoint.sh
frontend/: .env.development  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  App.vue.js  main.js  main.ts
frontend/src/api/: client.js  client.ts
frontend/src/router/: index.js  index.ts
frontend/src/stores/: auth.js  auth.ts
frontend/src/views/: Chat.vue  Chat.vue.js  Login.vue  Login.vue.js  Register.vue  Register.vue.js
